# Facial-recognization-based-Automated-Delivery-System

./: .gitignore  LED_Blink_Blut.py  Lock_final_code.py  README.md  camera.py  pyproject.toml  requirements.txt
FaceRecognition/: Face_code_test.py  Recognizer.py  Test.py  faceDataset.py
docs/: hardware.md
examples/: names.example.json
src/delivery_system/: __init__.py  bluetooth_robot.py  capture_faces.py  config.py  recognize_lock.py  train_model.py  vision.py
